More Conversions and Repairs

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ config.log
 config.status
 configure
 libtool
-src/config/dash-config.h
-src/config/dash-config.h.in
+src/config/darksilk-config.h
+src/config/darksilk-config.h.in
 src/config/stamp-h1
 share/setup.nsi
 share/qt/Info.plist
