--- a/libdarksilkconsensus.pc.in
+++ b/libdarksilkconsensus.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: Bitcoin Core consensus library
-Description: Library for the Bitcoin consensus protocol.
+Name: DarkSilk Core consensus library
+Description: Library for the DarkSilk consensus protocol.
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -lbitcoinconsensus
+Libs: -L${libdir} -ldarksilkconsensus
 Cflags: -I${includedir}
 Requires.private: libcrypto
