Share/Contrib Folders

--- a/contrib/debian/examples/darksilk.conf
+++ b/contrib/debian/examples/darksilk.conf
@@ -1,10 +1,10 @@
 ##
-## dash.conf configuration file. Lines beginning with # are comments.
+## darksilk.conf configuration file. Lines beginning with # are comments.
 ##
  
 # Network-related settings:
 
-# Run on the test network instead of the real dash network.
+# Run on the test network instead of the real darksilk network.
 #testnet=0
 
 # Run a regression test network
@@ -57,10 +57,10 @@
 #maxconnections=
 
 #
-# JSON-RPC options (for controlling a running Dash/dashd process)
+# JSON-RPC options (for controlling a running DarkSilk/darksilkd process)
 #
 
-# server=1 tells Dash-Qt and dashd to accept JSON-RPC commands
+# server=1 tells DarkSilk-Qt and darksilkd to accept JSON-RPC commands
 #server=0
 
 # Bind to given address to listen for JSON-RPC connections. Use [host]:port notation for IPv6.
@@ -71,7 +71,7 @@
 #rpcuser=Ulysseys
 #rpcpassword=YourSuperGreatPasswordNumber_DO_NOT_USE_THIS_OR_YOU_WILL_GET_ROBBED_385593
 
-# How many seconds Dash Core will wait for a complete RPC HTTP request.
+# How many seconds DarkSilk Core will wait for a complete RPC HTTP request.
 # after the HTTP connection is established. 
 #rpcclienttimeout=30
 
@@ -82,8 +82,8 @@
 # NOTE: opening up the RPC port to hosts outside your local trusted network is NOT RECOMMENDED,
 # because the rpcpassword is transmitted over the network unencrypted.
 
-# server=1 tells Dash-Qt to accept JSON-RPC commands.
-# it is also read by dashd to determine if RPC should be enabled 
+# server=1 tells DarkSilk-Qt to accept JSON-RPC commands.
+# it is also read by darksilkd to determine if RPC should be enabled 
 #rpcallowip=10.1.1.34/255.255.255.0
 #rpcallowip=1.2.3.4/24
 #rpcallowip=2001:db8:85a3:0:0:8a2e:370:7334/96
@@ -91,7 +91,7 @@
 # Listen for RPC connections on this TCP port:
 #rpcport=9998
 
-# You can use Dash or dashd to send commands to Dash/dashd
+# You can use DarkSilk or darksilkd to send commands to DarkSilk/darksilkd
 # running on another host using this option:
 #rpcconnect=127.0.0.1
 
@@ -110,14 +110,14 @@
 # both prior transactions and several dozen future transactions.
 #keypool=100
 
-# Pay an optional transaction fee every time you send dashs.  Transactions with fees
+# Pay an optional transaction fee every time you send darksilks.  Transactions with fees
 # are more likely than free transactions to be included in generated blocks, so may
 # be validated sooner.
 #paytxfee=0.00
 
 # User interface options
 
-# Start Dash minimized
+# Start DarkSilk minimized
 #min=1
 
 # Minimize to the system tray
