--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -1,68 +1,58 @@
-Source: dash
+Source: darksilk
 Section: utils
 Priority: optional
-Maintainer: Holger Schinzel <holger@dash.org>
-Uploaders: Holger Schinzel <holger@dash.org>
+Maintainer: Jonas Smedegaard <dr@jones.dk> ***TODO***
+Uploaders: Micah Anderson <micah@debian.org> ***TODO***
 Build-Depends: debhelper,
  devscripts,
  automake,
  libtool,
  bash-completion,
+ libboost-system-dev (>> 1.35) | libboost-system1.35-dev,
  libdb4.8++-dev,
  libssl-dev,
  pkg-config,
- libevent-dev,
- libboost-system1.48-dev | libboost-system-dev (>> 1.35),
- libboost-filesystem1.48-dev | libboost-filesystem-dev (>> 1.35),
- libboost-program-options1.48-dev | libboost-program-options-dev (>> 1.35),
- libboost-thread1.48-dev | libboost-thread-dev (>> 1.35),
- libboost-test1.48-dev | libboost-test-dev (>> 1.35),
- libboost-chrono1.48-dev | libboost-chrono-dev (>> 1.35),
+ libminiupnpc8-dev,
+ libboost-filesystem-dev (>> 1.35) | libboost-filesystem1.35-dev,
+ libboost-program-options-dev (>> 1.35) | libboost-program-options1.35-dev,
+ libboost-thread-dev (>> 1.35) | libboost-thread1.35-dev,
+ libboost-test-dev (>> 1.35) | libboost-test1.35-dev,
  qt4-qmake,
  libqt4-dev,
  libqrencode-dev,
- libprotobuf-dev, protobuf-compiler,
- python
+ libprotobuf-dev, protobuf-compiler
 Standards-Version: 3.9.2
-Homepage: https://www.dash.org/
-Vcs-Git: git://github.com/dashpay/dash.git
-Vcs-Browser: https://github.com/dashpay/dash
+Homepage: http://www.darksilkpay.io/
+Vcs-Git: git://github.com/silknetwork/darksilk-core.git
+Vcs-Browser: http://github.com/silknetwork/darksilk-core
 
-Package: dashd
+Package: darksilkd
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - daemon
- Dash is an experimental new digital currency that enables anonymous, instant
- payments to anyone, anywhere in the world. Dash uses peer-to-peer
- technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Dash Core
- is the name of the open source software which enables the use of this currency.
+ DarkSilk is a free open source peer-to-peer electronic cash system that
+ is completely decentralized, without the need for a central server or
+ trusted parties.  Users hold the crypto keys to their own money and
+ transact directly with each other, with the help of a P2P network to
+ check for double-spending.
  .
- This package provides the daemon, dashd, and the CLI tool
- dash-cli to interact with the daemon.
+ Full transaction history is stored locally at each client.  This
+ requires 1+ GB of space, slowly growing.
+ .
+ This package provides the daemon, darksilkd, and the CLI tool
+ darksilk-cli to interact with the daemon.
 
-Package: dash-qt
+Package: darksilk-qt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - Qt GUI
- Dash is an experimental new digital currency that enables anonymous, instant
- payments to anyone, anywhere in the world. Dash uses peer-to-peer
- technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Dash Core
- is the name of the open source software which enables the use of this currency.
+ DarkSilk is a free open source peer-to-peer electronic cash system that
+ is completely decentralized, without the need for a central server or
+ trusted parties.  Users hold the crypto keys to their own money and
+ transact directly with each other, with the help of a P2P network to
+ check for double-spending.
  .
- This package provides Dash-Qt, a GUI for Dash based on Qt.
-
-Package: dash-tx
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: peer-to-peer digital currency - standalone transaction tool
- Dash is an experimental new digital currency that enables anonymous, instant
- payments to anyone, anywhere in the world. Dash uses peer-to-peer
- technology to operate with no central authority: managing transactions
- and issuing money are carried out collectively by the network. Dash Core
- is the name of the open source software which enables the use of this currency.
+ Full transaction history is stored locally at each client.  This
+ requires 1+ GB of space, slowly growing.
  .
- This package provides dash-tx, a command-line transaction creation
- tool which can be used without a dash daemon.  Some means of
- exchanging minimal transaction data with peers is still required.
+ This package provides DarkSilk-Qt, a GUI for DarkSilk based on Qt.
