--- a/contrib/init/org.darksilk.darksilkd.plist
+++ b/contrib/init/org.darksilk.darksilkd.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>Label</key>
-	<string>org.dash.dashd</string>
+	<string>org.darksilk.darksilkd</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/usr/local/bin/dashd</string>
+		<string>/usr/local/bin/darksilkd</string>
 		<string>-daemon</string>
 	</array>
 	<key>RunAtLoad</key>
