--- a/contrib/linearize/example-linearize.cfg
+++ b/contrib/linearize/example-linearize.cfg
@@ -3,14 +3,14 @@
 rpcuser=someuser
 rpcpassword=somepassword
 host=127.0.0.1
-port=9998
+port=31000
 
 # bootstrap.dat hashlist settings (linearize-hashes)
 max_height=3130000
 
 # bootstrap.dat input/output settings (linearize-data)
 netmagic=bf0c6bbd
-input=/home/example/.dashcore/blocks
+input=/home/example/.darksilk/blocks
 output_file=/home/example/Downloads/bootstrap.dat
 hashlist=hashlist.txt
 split_year=1
