--- a/qa/pull-tester/tests_config.py.in
+++ b/qa/pull-tester/tests_config.py.in
@@ -8,8 +8,8 @@ EXEEXT="@EXEEXT@"
 
 # These will turn into comments if they were disabled when configuring.
 @ENABLE_WALLET_TRUE@ENABLE_WALLET=1
-@BUILD_BITCOIN_UTILS_TRUE@ENABLE_UTILS=1
-@BUILD_BITCOIND_TRUE@ENABLE_BITCOIND=1
+@BUILD_DARKSILK_UTILS_TRUE@ENABLE_UTILS=1
+@BUILD_DARKSILKD_TRUE@ENABLE_DARKSILKD=1
 @ENABLE_ZMQ_TRUE@ENABLE_ZMQ=1
 
 
