--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - sudo add-apt-repository -y ppa:silknetwork/silknetwork
   - sudo apt-get update -y && sudo apt-get install -y libdb4.8-dev libdb4.8++-dev
 script:
-  - ./autogen.sh && ./configure --with-gui=qt5 --disable-tests && make
+  - ./autogen.sh && ./configure --with-gui=qt5 && make
 
 deploy:
   provider: releases
