[DDNS] Add Qt components for ddns

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -24,6 +24,7 @@ QT_FORMS_UI = \
   qt/forms/addressbookpage.ui \
   qt/forms/askpassphrasedialog.ui \
   qt/forms/coincontroldialog.ui \
+  qt/forms/dnspage.ui \
   qt/forms/sandstormconfig.ui \
   qt/forms/editaddressdialog.ui \
   qt/forms/helpmessagedialog.ui \
@@ -49,6 +50,8 @@ QT_MOC_CPP = \
   qt/moc_darksilkamountfield.cpp \
   qt/moc_darksilkgui.cpp \
   qt/moc_darksilkunits.cpp \
+  qt/moc_dnspage.cpp \
+  qt/moc_dnstablemodel.cpp \
   qt/moc_clientmodel.cpp \
   qt/moc_coincontroldialog.cpp \
   qt/moc_coincontroltreewidget.cpp \
@@ -117,6 +120,8 @@ DARKSILK_QT_H = \
   qt/darksilkamountfield.h \
   qt/darksilkgui.h \
   qt/darksilkunits.h \
+  qt/dnspage.h \
+  qt/dnstablemodel.h \
   qt/clientmodel.h \
   qt/coincontroldialog.h \
   qt/coincontroltreewidget.h \
@@ -180,6 +185,7 @@ RES_ICONS = \
   qt/res/icons/drk/connect2_16.png \
   qt/res/icons/drk/connect3_16.png \
   qt/res/icons/drk/connect4_16.png \
+  qt/res/icons/drk/decentralised.png \
   qt/res/icons/drk/debugwindow.png \
   qt/res/icons/drk/drkpurple_editpaste.png \
   qt/res/icons/drk/drkpurple_address-book.png \
@@ -226,6 +232,8 @@ DARKSILK_QT_CPP = \
   qt/darksilkunits.cpp \
   qt/clientmodel.cpp \
   qt/csvmodelwriter.cpp \
+  qt/dnspage.cpp \
+  qt/dnstablemodel.cpp \
   qt/guiutil.cpp \
   qt/intro.cpp \
   qt/networkstyle.cpp \
