--- a/src/Makefile.new.am
+++ b/src/Makefile.new.am
@@ -106,9 +106,9 @@ DARKSILK_CORE_H = \
   consensus/validation.h \
   core_io.h \
   core_memusage.h \
-  sandstorm.h \
+  privatesend.h \
   ssnotificationinterface.h \
-  sandstorm-relay.h \
+  privatesend-relay.h \
   governance.h \
   governance-brain.h \
   governance-classes.h \
@@ -254,9 +254,9 @@ libdarksilk_wallet_a_CPPFLAGS = $(AM_CPPFLAGS) $(DARKSILK_INCLUDES)
 libdarksilk_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libdarksilk_wallet_a_SOURCES = \
   activestormnode.cpp \
-  sandstorm.cpp \
+  privatesend.cpp \
   ssnotificationinterface.cpp \
-  sandstorm-relay.cpp \
+  privatesend-relay.cpp \
   governance.cpp \
   governance-brain.cpp \ 
   governance-classes.cpp \
