--- a/src/Makefile.new.am
+++ b/src/Makefile.new.am
@@ -107,7 +107,7 @@ DARKSILK_CORE_H = \
   core_io.h \
   core_memusage.h \
   privatesend.h \
-  ssnotificationinterface.h \
+  psnotificationinterface.h \
   privatesend-relay.h \
   governance.h \
   governance-brain.h \
@@ -255,7 +255,7 @@ libdarksilk_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libdarksilk_wallet_a_SOURCES = \
   activestormnode.cpp \
   privatesend.cpp \
-  ssnotificationinterface.cpp \
+  psnotificationinterface.cpp \
   privatesend-relay.cpp \
   governance.cpp \
   governance-brain.cpp \ 
