--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -231,6 +231,7 @@ libdarksilk_server_a_SOURCES = \
   rpcrawtransaction.cpp \
   rpcserver.cpp \
   script/sigcache.cpp \
+  sendalert.cpp \
   timedata.cpp \
   torcontrol.cpp \
   txdb.cpp \
