fixing strings and docs

--- a/contrib/debian/examples/darksilk.conf
+++ b/contrib/debian/examples/darksilk.conf
@@ -108,7 +108,7 @@
 # both prior transactions and several dozen future transactions.
 #keypool=100
 
-# Pay an optional transaction fee every time you send darksilks.  Transactions with fees
+# Pay an optional transaction fee every time you send DarkSilk.  Transactions with fees
 # are more likely than free transactions to be included in generated blocks, so may
 # be validated sooner.
 #paytxfee=0.00
