--- a/configure.ac
+++ b/configure.ac
@@ -48,6 +48,13 @@ case $host in
   ;;
 esac
 
+dnl Require C++11 compiler (no GNU extensions)
+AX_CXX_COMPILE_STDCXX([11], [noext], [mandatory])
+AX_CXX_COMPILE_STDCXX([11], [noext], [mandatory], [nodefault])
+
+dnl Check if -latomic is required for <std::atomic>
+CHECK_ATOMIC
+ 
 dnl Unless the user specified OBJCXX, force it to be the same as CXX. This ensures
 dnl that we get the same -std flags for both.
 m4_ifdef([AC_PROG_OBJCXX],[
