--- a/src/config/dynamic-config.h.in
+++ b/src/config/dynamic-config.h.in
@@ -61,6 +61,9 @@
 /* Define this symbol if the consensus lib has been built */
 #undef HAVE_CONSENSUS_LIB
 
+/* define if the compiler supports basic C++11 syntax */
+#undef HAVE_CXX11
+
 /* Define to 1 if you have the declaration of `be16toh', and to 0 if you
    don't. */
 #undef HAVE_DECL_BE16TOH
