--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -7,7 +7,8 @@ bench_bench_dynamic_SOURCES = \
   bench/bench_dynamic.cpp \
   bench/bench.cpp \
   bench/bench.h \
-  bench/Examples.cpp
+  bench/Examples.cpp \
+  bench/lockedpool.cpp
 
 bench_bench_dynamic_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_INCLUDES) $(EVENT_CLFAGS) $(EVENT_PTHREADS_CFLAGS) -I$(builddir)/bench/
 bench_bench_dynamic_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
