Add High TX Fee Warning and repair commit 45d8b1e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -238,6 +238,7 @@ libdynamic_server_a_SOURCES = \
   torcontrol.cpp \
   txdb.cpp \
   txmempool.cpp \
+  ui_interface.cpp \
   validationinterface.cpp \
   versionbits.cpp \
   dns/dns.cpp \
