--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,16 +97,22 @@ DYNAMIC_CORE_H = \
   consensus/validation.h \
   core_io.h \
   core_memusage.h \
-  privatesend.h \
-  psnotificationinterface.h \
-  privatesend-relay.h \
+  dbwrapper.h \
+  dns/dns.h \
+  dns/dyndns.h \
+  dns/hooks.h \
+  dynode.h \
+  dynode-payments.h \
+  dynode-sync.h \
+  dynodeman.h \
+  dynodeconfig.h \
+  flat-database.h \
   governance.h \
   governance-classes.h \
   governance-exceptions.h \
   governance-object.h \
   governance-vote.h \
   governance-votedb.h \
-  flat-database.h \
   hash.h \
   httprpc.h \
   httpserver.h \
@@ -116,14 +122,8 @@ DYNAMIC_CORE_H = \
   key.h \
   keepass.h \
   keystore.h \
-  dbwrapper.h \
   limitedmap.h \
   main.h \
-  dynode.h \
-  dynode-payments.h \
-  dynode-sync.h \
-  dynodeman.h \
-  dynodeconfig.h \
   memusage.h \
   merkleblock.h \
   messagesigner.h \
@@ -139,6 +139,9 @@ DYNAMIC_CORE_H = \
   prevector.h \
   primitives/block.h \
   primitives/transaction.h \
+  privatesend.h \
+  psnotificationinterface.h \
+  privatesend-relay.h \
   protocol.h \
   pubkey.h \
   random.h \
@@ -185,11 +188,7 @@ DYNAMIC_CORE_H = \
   zmq/zmqabstractnotifier.h \
   zmq/zmqconfig.h\
   zmq/zmqnotificationinterface.h \
-  zmq/zmqpublishnotifier.h \
-  dns/dns.h \
-  dns/hooks.h \
-  dns/dyndns.h 
-
+  zmq/zmqpublishnotifier.h
 
 obj/build.h: FORCE
 	@$(MKDIR_P) $(builddir)/obj
@@ -207,15 +206,17 @@ libdynamic_server_a_SOURCES = \
   chain.cpp \
   checkpoints.cpp \
   checkforks.cpp \
-  httprpc.cpp \
-  httpserver.cpp \
-  init.cpp \
   dbwrapper.cpp \
+  dns/dns.cpp \
+  dns/dyndns.cpp \
   governance.cpp \
   governance-classes.cpp \
   governance-object.cpp \
   governance-vote.cpp \
   governance-votedb.cpp \
+  httprpc.cpp \
+  httpserver.cpp \
+  init.cpp \
   main.cpp \
   merkleblock.cpp \
   messagesigner.cpp \
@@ -244,8 +245,6 @@ libdynamic_server_a_SOURCES = \
   ui_interface.cpp \
   validationinterface.cpp \
   versionbits.cpp \
-  dns/dns.cpp \
-  dns/dyndns.cpp \
   $(DYNAMIC_CORE_H)
 
 if ENABLE_ZMQ
@@ -266,16 +265,17 @@ libdynamic_wallet_a_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_INCLUDES)
 libdynamic_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libdynamic_wallet_a_SOURCES = \
   activedynode.cpp \
-  privatesend.cpp \
-  psnotificationinterface.cpp \
-  privatesend-relay.cpp \
-  instantsend.cpp \
   dynode.cpp \
   dynode-payments.cpp \
   dynode-sync.cpp \
   dynodeconfig.cpp \
   dynodeman.cpp \
+  instantsend.cpp \
   keepass.cpp \
+  policy/rbf.cpp \
+  privatesend.cpp \
+  privatesend-relay.cpp \
+  psnotificationinterface.cpp \
   wallet/crypter.cpp \
   wallet/db.cpp \
   wallet/rpcdump.cpp \
@@ -283,7 +283,6 @@ libdynamic_wallet_a_SOURCES = \
   wallet/wallet.cpp \
   wallet/wallet_ismine.cpp \
   wallet/walletdb.cpp \
-  policy/rbf.cpp \
   $(DYNAMIC_CORE_H)
 
 # crypto primitives library
@@ -291,6 +290,20 @@ crypto_libdynamic_crypto_a_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_CONFIG_INCLUDES) 
 crypto_libdynamic_crypto_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) $(PIC_FLAGS)
 crypto_libdynamic_crypto_a_SOURCES = \
   crypto/common.h \
+  crypto/argon2d/argon2.h \
+  crypto/argon2d/core.h \
+  crypto/argon2d/encoding.h \
+  crypto/argon2d/thread.h \
+  crypto/argon2d/argon2.c \
+  crypto/argon2d/core.c \
+  crypto/argon2d/encoding.c \
+  crypto/argon2d/opt.c \
+  crypto/argon2d/thread.c \
+  crypto/blake2/blake2b.c \
+  crypto/blake2/blake2.h \
+  crypto/blake2/blake2-impl.h \
+  crypto/blake2/blamka-round-opt.h \
+  crypto/blake2/blamka-round-ref.h \
   crypto/hmac_sha256.cpp \
   crypto/hmac_sha256.h \
   crypto/hmac_sha512.cpp \
@@ -303,21 +316,7 @@ crypto_libdynamic_crypto_a_SOURCES = \
   crypto/sha256.h \
   crypto/sha512.h \
   crypto/sha512.cpp \
-  crypto/sha512.h \
-  crypto/argon2d/argon2.h \
-  crypto/argon2d/core.h \
-  crypto/argon2d/encoding.h \
-  crypto/argon2d/thread.h \
-  crypto/argon2d/argon2.c \
-  crypto/argon2d/core.c \
-  crypto/argon2d/encoding.c \
-  crypto/argon2d/thread.c \
-  crypto/argon2d/opt.c \
-  crypto/blake2/blake2b.c \
-  crypto/blake2/blake2-impl.h \
-  crypto/blake2/blake2.h \
-  crypto/blake2/blamka-round-opt.h \
-  crypto/blake2/blamka-round-ref.h
+  crypto/sha512.h
 
 # common: shared between dynamicd, and dynamic-qt and non-server tools
 libdynamic_common_a_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_INCLUDES)
@@ -355,7 +354,6 @@ libdynamic_common_a_SOURCES = \
 libdynamic_util_a_CPPFLAGS = $(AM_CPPFLAGS) $(DYNAMIC_INCLUDES)
 libdynamic_util_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 libdynamic_util_a_SOURCES = \
-  support/lockedpool.cpp \
   chainparamsbase.cpp \
   clientversion.cpp \
   compat/glibc_sanity.cpp \
@@ -364,6 +362,7 @@ libdynamic_util_a_SOURCES = \
   random.cpp \
   rpcprotocol.cpp \
   support/cleanse.cpp \
+  support/lockedpool.cpp \
   sync.cpp \
   uint256.cpp \
   util.cpp \
