[Protocol] Implement Fluid Protocol | Insert exceptions for validation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -109,6 +109,7 @@ DYNAMIC_CORE_H = \
   dynodeman.h \
   dynodeconfig.h \
   flat-database.h \
+  fluid.h \
   governance.h \
   governance-classes.h \
   governance-exceptions.h \
@@ -213,6 +214,7 @@ libdynamic_server_a_SOURCES = \
   dbwrapper.cpp \
   dns/dns.cpp \
   dns/dyndns.cpp \
+  fluid.cpp \
   governance.cpp \
   governance-classes.cpp \
   governance-object.cpp \
@@ -241,6 +243,7 @@ libdynamic_server_a_SOURCES = \
   rpcnet.cpp \
   rpcrawtransaction.cpp \
   rpcserver.cpp \
+  rpcfluid.cpp \
   script/sigcache.cpp \
   sendalert.cpp \
   timedata.cpp \
